--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -149,10 +149,12 @@
           href: vnet-service-endpoint.md
         - name: Key vault support
           href: access-secrets-from-keyvault.md
+    - name: Enterprise readiness 
+      items:
+      - name: Backups and on-demand restore
+        href: online-backup-and-restore.md
     - name: Prepay for reserved capacity
       href: cosmos-db-reserved-capacity.md
-    - name : Backup and restore
-      href: online-backup-and-restore.md
   - name: Multi-model APIs
     expanded: true
     items:
@@ -436,16 +438,20 @@
         href: how-to-create-container.md
       - name: Query a container
         href: how-to-query-container.md
-    - name: Indexing
-      items:
-      - name: Configure indexing
-        href: how-to-manage-indexing-policy.md
+      - name: Indexing
+        items:
+        - name: Configure indexing
+          href: how-to-manage-indexing-policy.md
     - name: Security
       items:
       - name: Configure IP firewall
         href: how-to-configure-firewall.md
       - name: Configure access from virtual networks
         href: how-to-configure-vnet-service-endpoint.md
+    - name: Enterprise readiness 
+      items:
+      - name: Restore data from backup
+        href: how-to-backup-and-restore.md
     - name : Manage
       items:
       - name: Manage using PowerShell
