--- a/articles/cosmos-db/TOC.yml
+++ b/articles/cosmos-db/TOC.yml
@@ -440,7 +440,7 @@
         href: how-to-create-container.md
       - name: Query a container
         href: how-to-query-container.md
-      - name: Query Azure Cosmos DB data
+      - name: Query data with SQL queries
         href: how-to-sql-query.md
     - name: Indexing
       items:
