Added link to break sentence. Updated TOC: changed pricing and limits to pricing, and added the throttling article under Resources.

--- a/articles/cognitive-services/Translator/toc.yml
+++ b/articles/cognitive-services/Translator/toc.yml
@@ -164,12 +164,14 @@
       href: https://cognitive.uservoice.com/knowledgebase/topics/132647-translator
     - name: Language and region support
       href: language-support.md
-    - name: Pricing and limits
+    - name: Pricing
       href: https://azure.microsoft.com/pricing/details/cognitive-services/translator-text-api/
     - name: Regional availability
       href: https://azure.microsoft.com/global-infrastructure/services/
     - name: Stack Overflow
       href: https://stackoverflow.com/questions/tagged/microsoft-translator
+    - name: Pricing
+      href: throttling-limits.md
     - name: UserVoice
       href: https://cognitive.uservoice.com/forums/558796-translator
 - name: Custom Translator
