formatting changes, and trying to fix breadcrumbs

--- a/articles/virtual-machines/windows/breadcrumb/toc.yml
+++ b/articles/virtual-machines/windows/breadcrumb/toc.yml
@@ -9,7 +9,8 @@
     - name: Windows
       tocHref: /azure/active-directory/managed-identities-azure-resources/
       topicHref: /azure/virtual-machines/windows/index
-    - name: SQL VM
-      tocHref: /azure/virtual-machines/windows/sql
-      topicHref: /azure/virtual-machines/windows/sql
+      items: 
+        - name: SQL VM
+        tocHref: /azure/virtual-machines/windows/sql
+        topicHref: /azure/virtual-machines/windows/sql
       
