--- a/articles/billing/TOC.yml
+++ b/articles/billing/TOC.yml
@@ -5,7 +5,7 @@
   items:
   - name: Understand your bill
     href: billing-understand-your-bill.md
-  - name: EA customers - understand your bill
+  - name: Understand your bill - EA only
     href: billing-understand-your-bill-ea.md
   - name: Get invoice and usage data
     href: billing-download-azure-invoice-daily-usage-date.md
@@ -19,7 +19,7 @@
   items:
   - name: Prevent unexpected costs
     href: billing-getting-started.md
-  - name: View Enterprise pricing
+  - name: View EA pricing
     href: billing-ea-pricing.md
   - name: Use resource tags
     href: ../azure-resource-manager/resource-group-using-tags.md?toc=/azure/billing/TOC.json
@@ -85,7 +85,7 @@
     href: billing-how-to-change-azure-account-profile.md
   - name: Grant access to billing
     href: billing-manage-access.md
-  - name: Enterprise roles in Azure
+  - name: EA roles in Azure
     href: billing-understand-ea-roles.md 
   - name: Link partner ID
     href: billing-partner-admin-link-started.md
